[gd_scene load_steps=60 format=2]

[ext_resource path="res://scripts/enemies/macaron.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemies/macaron/macaron slam.png" type="Texture" id=2]
[ext_resource path="res://sprites/enemies/macaron/macaron corpse.png" type="Texture" id=3]
[ext_resource path="res://sprites/enemies/macaron/macaron spawn puff.png" type="Texture" id=4]
[ext_resource path="res://scripts/melee_box.gd" type="Script" id=5]
[ext_resource path="res://sprites/enemies/macaron/macaron hurt.png" type="Texture" id=6]
[ext_resource path="res://scripts/shaders/flash.gdshader" type="Shader" id=7]
[ext_resource path="res://sprites/enemies/macaron/macaron idle.png" type="Texture" id=8]

[sub_resource type="ShaderMaterial" id=8]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 8 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 8 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 8 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 4 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 4 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 4 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 4 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 4 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 4 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="SpriteFrames" id=104]
animations = [ {
"frames": [ SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ) ],
"loop": true,
"name": "attack",
"speed": 12.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "dead",
"speed": 12.0
}, {
"frames": [ SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ) ],
"loop": true,
"name": "default",
"speed": 12.0
}, {
"frames": [ SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ) ],
"loop": true,
"name": "hurt",
"speed": 12.0
}, {
"frames": [ SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ) ],
"loop": true,
"name": "spawn",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=30]
radius = 7.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 12, 3 )

[sub_resource type="Animation" id=69]
resource_name = "dead"
length = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath("Sprite")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "dead", false ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=68]
resource_name = "hurt"
length = 0.25
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "hurt" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeleeBox/Shape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 3 ]
}

[sub_resource type="Animation" id=47]
resource_name = "idle"
length = 0.333333
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "default" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.333333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 3 ]
}

[sub_resource type="Animation" id=6]
resource_name = "melee_attack"
length = 0.583333
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("MeleeBox/Shape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.416667, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.583333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1, 11 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.416667 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "splash"
} ]
}

[sub_resource type="Animation" id=105]
resource_name = "spawn"
length = 0.666667
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "spawn" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.666667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1, 11 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.666667 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn"
} ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "flash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="AnimationNodeAnimation" id=70]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=71]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=50]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=59]
animation = "melee_attack"

[sub_resource type="AnimationNodeAnimation" id=106]
animation = "spawn"

[sub_resource type="AnimationNodeStateMachineTransition" id=62]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=72]

[sub_resource type="AnimationNodeStateMachineTransition" id=75]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=76]

[sub_resource type="AnimationNodeStateMachineTransition" id=80]

[sub_resource type="AnimationNodeStateMachineTransition" id=107]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=108]

[sub_resource type="AnimationNodeStateMachine" id=109]
states/dead/node = SubResource( 70 )
states/dead/position = Vector2( 492, -46.5556 )
states/hurt/node = SubResource( 71 )
states/hurt/position = Vector2( 679.366, -46.2593 )
states/idle/node = SubResource( 50 )
states/idle/position = Vector2( 679.366, 241.012 )
states/melee_attack/node = SubResource( 59 )
states/melee_attack/position = Vector2( 870, 55.4444 )
states/spawn/node = SubResource( 106 )
states/spawn/position = Vector2( 502.222, 63.2222 )
transitions = [ "melee_attack", "idle", SubResource( 62 ), "idle", "hurt", SubResource( 72 ), "hurt", "idle", SubResource( 75 ), "hurt", "dead", SubResource( 76 ), "idle", "melee_attack", SubResource( 80 ), "spawn", "idle", SubResource( 107 ), "idle", "spawn", SubResource( 108 ) ]
start_node = "idle"
graph_offset = Vector2( 7, -184 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=52]

[node name="Macaron" type="KinematicBody2D" groups=["enemy"]]
material = SubResource( 8 )
collision_layer = 6
collision_mask = 6
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
use_parent_material = true
position = Vector2( 0, -3 )
frames = SubResource( 104 )
__meta__ = {
"_edit_lock_": true
}

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 30 )
__meta__ = {
"_edit_lock_": true
}

[node name="ToPlayer" type="RayCast2D" parent="."]
collision_mask = 3

[node name="MeleeBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource( 5 )

[node name="Shape" type="CollisionShape2D" parent="MeleeBox"]
position = Vector2( 0, 3 )
shape = SubResource( 5 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 69 )
anims/hurt = SubResource( 68 )
anims/idle = SubResource( 47 )
anims/melee_attack = SubResource( 6 )
anims/spawn = SubResource( 105 )

[node name="FlashPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/flash = SubResource( 10 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 109 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 52 )

[node name="Audio" type="AudioStreamPlayer2D" parent="."]

[node name="Spawn_Position" type="Node2D" parent="."]
position = Vector2( 15, 11 )
